--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,90 @@
 @import-normalize; /* bring in normalize.css styles */
 
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin-bottom: 0;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0;
+}
+button,
+button:active,
+button:focus,
+input,
+input:active,
+input:focus,
+textarea,
+textarea:active,
+textarea:focus {
+  outline: none;
+  border: none;
+}
+.list {
+  list-style: none;
+}
+.link {
+  text-decoration: none;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin-left: 0;
+  margin-right: 0;
+  font-family: 'Rubik', sans-serif;
+}
+body.modal-open {
+  overflow: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.container {
+  height: 100%;
+  padding: 0px 8px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width: 374px) {
+  .container {
+    padding: 0px 16px;
+    max-width: 375px;
+  }
+}
+@media screen and (min-width: 1439px) {
+  .container {
+    padding: 112px;
+    max-width: 1440px;
+  }
+}
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+button {
+  padding: 0;
+  background-color: inherit;
 }
